# core/core-api/controller/v1/response/payment_response.go
@@ -1,0 +1,6 @@
+package response
+
+type CreatePaymentResponse struct {
+	OrderID    string `json:"orderId"`
+	ApproveURL string `json:"approveUrl"`
+}
